# ARPRO

./: .gitignore  LICENSE  README.md
2022_2023/group_1/battleship/: CMakeLists.txt  main.cpp
2022_2023/group_1/pointers/: CMakeLists.txt  main.cpp
2022_2023/group_1/sample_group_2/: CMakeLists.txt  project_root.cpp
2022_2023/group_2/battleship_g2/: CMakeLists.txt  boat.h  main.cpp  player.h
2022_2023/group_2/pointers/: CMakeLists.txt  main.cpp  public_and_not.cpp
2023-2024/group1/battleship/: CMakeLists.txt  main.cpp
2023-2024/group1/battleship/include/: grid.hpp  player.hpp
2023-2024/group1/battleship/src/: player.cpp
2023-2024/group1/battleship/teams/: main_human_and_bot.cpp  main_shoot_other_player.cpp  player_human_and_bot.hpp  player_place_all.hpp  player_safe_placement.hpp  player_shoot_other_player.hpp
2023-2024/group1/guess_the_number/: CMakeLists.txt  main.cpp
2023-2024/group1/sample_group1/: CMakeLists.txt  main.cpp
2023-2024/group2/battleship/: CMakeLists.txt  main.cpp  player.cpp  player.hpp  ship.hpp  utility.cpp  utility.hpp
2023-2024/group2/guess_number/: CMakeLists.txt  main.cpp
2023-2024/group2/sample_group2/: CMakeLists.txt  main.cpp
battleship/: CMakeLists.txt  battleship.cpp  board.h  main.cpp  player.cpp  player.h
battleship/include/: box.h  player.h
battleship/src/: player.cpp
first_lab/: CMakeLists.txt  guess_number.cpp  hello_world.cpp  inverse_guess_number.cpp
fun_min/: CMakeLists.txt  function_minimization.cpp
function_minization/: CMakeLists.txt  main.cpp
your_project/: CMakeLists.txt
(+4 files in other folders)
